syntax = "proto3";

option java_package = "com.bookstore.grpc";

service bookStore {
  rpc buyBook(BuyBookRequest) returns (APIResponse);
}

message BuyBookRequest {
  int32 studentId = 1;
  int32 bookId = 2;
  int32 bookPrice = 3;
}

message APIResponse{
  string responseMessage = 1;
  int32 responseCode = 2;
}

